    + New alphaThreshold optional parameter: If the new pixel format has one bit alpha or is indexed, then specifies
      a threshold value for treating alpha pixels completely transparent. Alpha pixels, which are not treated
      transparent are blended with the backColor parameter.
    + New overloads for omitting palette and for using a custom quantizer and ditherer.
  - EqualsByContent method:
    - Images with different raw format were considered different even if their raw content were the same. From now
      on images with different raw format can also be considered equal (as expected based on the documentation).
    - Images with the same stride size were considered different if the absolute value of their stride were
      different (a top-down image was compared to a bottom-up image).
  + New DrawInto methods: Similar to Graphics.DrawImage but supports every PixelFormat
- MetafileExtensions class:
  - Save method: Fixing an ArgumentException if the raw format of the metafile to save is WMF rather than EMF.


~~~~~~~~~
* v4.7.0:
~~~~~~~~~

* Assembly: Referencing KGySoft.CoreLibraries v4.7.0

! KGySoft.Drawing namespace:
============================
! IconExtensions class:
  ! ExtractNearestBitmap/ExtractNearestIcon methods: Size has preference over BPP value and on equal distances
    the larger size and higher BPP values are selected. In contrast, in previous versions the result could
    depend on the order of the stored images.
  + New ToUncompressedIcon method.
  + New IsCompressed method.
  + New GetBitsPerPixel method.
  * ToMultiResBitmap method:
    + A new overload that can be used to prevent compression for larger images in the result bitmap.
	- The original overload prevents compression in Windows XP and allows it in Windows Vista and above.
  * ExtractIcons, ExtractIcon, ExtractNearestIcon, Combine methods:
    + New overloads that can be used to prevent compression if the result icon contains larger images.